attempting fix for backface-visibility on safari

--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,11 @@
 }
 
 body {
-  background-color: var(--light);
+  background-color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   height: 100%;
   width: 100%;
   margin: 0;
-  font-size: 1rem;
   color: black;
 }
 
@@ -304,7 +303,7 @@ footer {
 }
 
 .flip {
-  transform: rotateY(180deg); box-shadow: -3px 3px 6px -2px black;
+  transform: rotateY(180deg) translateZ(1px); box-shadow: -3px 3px 6px -2px black;
 }
 
 .card-front, .card-back {
